--- a/catalogue.html
+++ b/catalogue.html
@@ -1,3 +1,15 @@
-<div>
+<div class="catalogue">
   <h1>Katalog chwastów</h1>
+  <div class="row">
+    <div ng-repeat="plant in plants" class="col-sm-6 col-md-4 col-lg-3">
+      <div class="thumbnail">
+        <img src="http://placehold.it/240x200">
+        <div class="caption">
+          <h3 ng-bind="plant.name"></h3>
+          <p>Nazwa łacińska: <span class="latin-name" ng-bind="plant.latin_name"></span></p>
+          <p ng-bind="plant.description"></p>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
