Switching from CSS to less.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet/less" type="text/css" href="css/styles.less">
     <!--/CSS styles-->
 
     <!--Javascript files-->
@@ -23,6 +23,7 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular-route.min.js"></script>
 
     <script type="text/javascript" src="js/all.js"></script>
+    <script type="text/javascript" src="js/less.min.js"></script>
     <!--/Javascript files-->
   </head>
   <body ng-app="chwasty">
