--- a/catalogue.html
+++ b/catalogue.html
@@ -1,7 +1,14 @@
 <div class="catalogue">
-  <h1>Katalog chwastów</h1>
+  <div class="well row">
+    <h1 class="col-sm-6">Katalog chwastów</h1>
+    <div class="input-group col-sm-6">
+      <span class="input-group-addon glyphicon glyphicon-search"></span>
+      <input ng-model="search" type="text" class="form-control" placeholder="Szukaj...">
+    </div>
+  </div>
   <div class="row">
-    <div ng-repeat="plant in plants" class="col-sm-6 col-md-4 col-lg-3">
+    <div ng-repeat="plant in plants | filter: search"
+         class="col-sm-6 col-md-4 col-lg-3 at-repeat-flip-in-vertical at-repeat-flip-out-vertical">
       <div class="thumbnail">
         <img src="http://placehold.it/240x200">
         <div class="caption">
