--- a/catalogue.html
+++ b/catalogue.html
@@ -7,12 +7,14 @@
     </div>
   </div>
   <div class="row">
-    <div ng-repeat="plant in plants | filter: search"
+    <div ng-repeat="(plantId, plant) in plants | filter: search"
          class="col-sm-6 col-md-4 col-lg-3 at-repeat-flip-in-vertical at-repeat-flip-out-vertical">
       <div class="thumbnail">
-        <img src="http://placehold.it/240x200">
+        <a ng-href="{{getDetailsUrl(plantId)}}"><img src="http://placehold.it/240x200"></a>
         <div class="caption">
-          <h3 ng-bind="plant.name"></h3>
+          <a ng-href="{{getDetailsUrl(plantId)}}">
+            <h3 ng-bind="plant.name"></h3>
+          </a>
           <p>Nazwa łacińska: <span class="latin-name" ng-bind="plant.latin_name"></span></p>
           <p ng-bind="plant.description"></p>
         </div>
